<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:gravity="top|left"
	android:orientation="vertical">
	<TextView
        android:text="@string/intro1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:gravity="left" />
	<TextView
        android:text="@string/intro2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:gravity="left" />
	<TextView
        android:text="@string/intro3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:gravity="left" />
	<TextView
        android:text="@string/intro4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:gravity="left" />
	<TextView
        android:text="@string/intro5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:gravity="left" />
	<TextView
        android:text="@string/intro6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:gravity="left" />
	<Button android:id="@+id/start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start" />
</LinearLayout>
